--- a/src/app/run/run.component.scss
+++ b/src/app/run/run.component.scss
@@ -7,7 +7,7 @@
   grid-template-areas:
     "topbar"
     "content";
-  min-height: 100vh;
+  min-height: 100%;
   background: var(--bg-color);
   color: var(--text-color);
   font-family: "Orbitron", sans-serif;
